added musica da gasta

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@ body {
 }
 </style>
 <body>
-<div>
-
-</div>
-<button id="btnStart">Start</button>
+    <audio id="player" src="assets/mainMusic.mp3"></audio>
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script type="module" src="app.js"></script>
