--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 </style>
 <body>
-    <audio id="player" src="assets/mainMusic.mp3" loop></audio>
+    <audio id="player" src="assets/mainMusic.mp3" loop preload="auto"></audio>
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script type="module" src="app.js"></script>
