--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
 </style>
 <body>
     <audio id="player" src="assets/mainMusic.mp3" loop preload="auto"></audio>
+    <button style="display:none" id="playMusic"></button>
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script type="module" src="app.js"></script>
