add more audios

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 </style>
 <body>
-    <audio id="player" src="assets/mainMusic.mp3" loop preload="auto"></audio>
+    <audio id="player" src="assets/mainMusic.mp3"  preload="auto"></audio>
     <button style="display:none" id="playMusic"></button>
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
