--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ body {
     <button style="display:none" id="playMusic"></button>
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script type="module" src="app.js"></script>
+<script type="module" src="app-out.js"></script>
 </html>
